<resources>
    <string name="app_name">test2</string>
    <string name="name">Name</string>
    <string name="family">Family</string>
    <string name="show_text">Show text</string>
    <string name="showtimer">ShowTimer</string>
    <string name="showtimer2">ShowTimer2</string>
    <string name="start">start</string>
    <string name="pause">Pause</string>
    <string name="reset">Reset</string>
    <string name="calculate">calculate</string>
    <string name="desc">توضیحات</string>
    <string name="send">send</string>
    <string name="show">show</string>
    <string name="settings">Settings</string>
    <string name="Alarm">alarm</string>
    <string name="account">account</string>
    <string name="dashboard">Dashboard</string>
    <string name="home">Home</string>
    <string name="message">Message</string>
    <string name="person">Person</string>
    <string name="basket">Basket</string>
    <string name="phone">Phone</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_user">UserActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">User List</string>
    <string name="second_fragment_label">User Add</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="save">Save</string>
    <string name="_25">25</string>
    <string name="city_name">نام شهر مورد تظر</string>

</resources>