<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/menu_settings"
          android:title="@string/settings"
        android:icon="@drawable/ic_baseline_settings_24"
        app:showAsAction="always"
        />
    <item android:id="@+id/menu_account"
        android:title="@string/account"
        android:icon="@drawable/ic_baseline_settings_24"

        />
    <item android:id="@+id/menu_dashboard"
        android:title="@string/dashboard"
        android:icon="@drawable/ic_baseline_settings_24"

        />
    <item android:id="@+id/menu_alarm"
        android:title="@string/Alarm"
        android:icon="@drawable/ic_baseline_settings_24"

        />


</menu>