<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="100dp">

    <TextView
        android:id="@+id/txtName"
        android:text="@string/name"
        android:layout_marginStart="5dp"
        android:textSize="22sp"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/txtFamily"
        android:text="@string/family"
        android:layout_marginStart="5dp"
        android:textSize="22sp"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/txtAge"
        android:text="@string/_25"
        android:layout_marginStart="5dp"
        android:textSize="22sp"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</LinearLayout>