<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:gravity="center"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity6">
    <ImageView
        android:id="@+id/img_main6"
        android:src="@drawable/user_icon"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:scaleType="fitXY"
        android:contentDescription="@string/desc"
        />
    <TextView
        android:id="@+id/txt_main6_title"
        android:text="@string/app_name"
        android:layout_marginTop="25dp"
        android:textSize="35sp"
        android:textColor="@color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/btn_main6_send"
        android:background="@drawable/shape_test"
        android:text="@string/send"
        android:layout_marginTop="65dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
</LinearLayout>